Fix strange spacing in lists

--- a/css/prism-base16-monokai.dark.css
+++ b/css/prism-base16-monokai.dark.css
@@ -13,7 +13,7 @@
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
-	background: #272822;
+	background: #33313b;
 	color: #f8f8f2;
 }
 pre[class*="language-"] {
